# MiniEvent

./: .gitignore  CMakeLists.txt  README.md  demo_http_request  demo_http_request.cpp  test_communication.sh  test_concurrent_clients.sh  test_multiple_messages.sh
.cache/clangd/index/: Channel.cpp.2EDA33B20F307784.idx  Channel.hpp.629337FC6254A587.idx  Epoll_multiplexer.cpp.9EC46D002BACCB15.idx  Epoll_multiplexer.hpp.5340654FB82622E3.idx  EventBase.cpp.FF691945AE42A051.idx  EventBase.hpp.D54F9F61104AB82D.idx  IO_Multiplexer.hpp.F6983C8B2AB06B2D.idx  MiniEventLog.cpp.821C4E16F4DBF823.idx  MiniEventLog.hpp.4480117FB456302E.idx  Platform.hpp.203C0C8B217FFDF6.idx  Select_multiplexer.cpp.8A99EA596E2FD404.idx  Select_multiplexer.hpp.A32DF7C8A0D015C6.idx  min_heap.hpp.318F009716D4A487.idx
docs/: CODE_READING_GUIDE.md  architecture-diagram.md  log-format.md
include/: AbstractSever.hpp  Channel.hpp  ConnectionManager.hpp  EVConnListener.hpp  EventBase.hpp  MessageHandler.hpp  MiniEventLog.hpp
include/Buffer/: Buffer.hpp  BufferEvent.hpp
include/Configure/: Configure.hpp
include/InheritedFromIO_Multiplexer/: Select_multiplexer.hpp
include/MultiThread/: ThreadPool_副本.hpp
include/Sever/: TCPSever.hpp
scripts/: cpu_sample.sh  gen_coverage_matrix.py  smoke_http.sh
specs/001-/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-/contracts/: test-matrix.md
specs/002-generate-detailed-code/: data-model.md  research.md  spec.md  tasks.md
specs/备选方案-Channel-RAII-fd/: tasks.md
src/: AbstractSever.cpp  Buffer.cpp  BufferEvent.cpp  Channel.cpp  Configure.cpp  ConnectionManager.cpp  EVConnListener.cpp  EventBase.cpp  MessageHandler.cpp  MiniEventLog.cpp  MultiplexerSelector.cpp
src/InheritedFromIO_Multiplexer/: Epoll_multiplexer.cpp  IOCP_multiplexer.cpp  Kqueue_multiplexer.cpp  Select_multiplexer.cpp
src/Sever/: HTTPSever.cpp  TCPSever.cpp
src/demo/: client.cpp  main.cpp  network_demo.cpp
tests/: CMakeLists.txt  test_configure.cpp  test_http_request.cpp  test_mini_event.cpp
tests/component/: test_bufferevent_channel.cpp  test_connection_manager_cleanup.cpp  test_connection_manager_concurrency.cpp  test_event_loop.cpp  test_multiplexer_selector.cpp
tests/fixtures/: example_config.ini
tests/integration/: test_connection_timeout.cpp  test_http_basic.cpp  test_http_malformed.cpp  test_multiple_connections.cpp  test_reconfigure_port.cpp
tests/smoke/: test_smoke_http.cpp  test_timeout_smoke.cpp
tests/unit/: example_gtest.cpp  test_buffer.cpp  test_channel_callback.cpp  test_configure.cpp  test_configure_fields.cpp  test_connection_manager.cpp  test_http_parse_error.cpp  test_log_format.cpp  test_mini_event.cpp  test_timeout.cpp
